# exerevnetes

./: .gitignore  LICENCE  README.md  pyproject.toml  setup.py
exerevnetes/: __init__.py  base.py  base_validation.py  utils.py
exerevnetes/classification/: __init__.py  _clf_comparator.py  binary_comparator.py  regression_comparator.py
exerevnetes/classification/tests/: test_binary_comparator.py  test_clf_comparator.py
exerevnetes/regression/: __init__.py  regression_comparator.py
exerevnetes/regression/tests/: test_regression_comparator.py
exerevnetes/utils/: __init__.py  binary_classification_validation.py  regression_validation.py  validation.py
exerevnetes/utils/tests/: test_binary_clf_validation.py  test_regression_validation.py
tests/: testing.ipynb
