[tool.poetry]
name = "exerevnetes"
version = "0.1.0"
description = "Another auto machine learning implementation"
authors = ["carnivore7777 <antgiannoulopoulos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
ipykernel = "^6.24.0"
scikit-learn = "^1.3.0"
tqdm = "^4.65.0"
catboost = "^1.2"
xgboost = "^1.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
